--- a/kubernetes/base/console/kustomization.yaml
+++ b/kubernetes/base/console/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: realtime-streaming
+namespace: gai-platform
 resources:
   - pezzo-console-deployment.yaml
   - pezzo-console-service.yaml
