--- a/kubernetes/base/redis/kustomization.yaml
+++ b/kubernetes/base/redis/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: gai-platform
+namespace: realtime-streaming
 resources:
   - redis-stack-server-deployment.yaml
   - redis-stack-server-service.yaml
