--- a/kubernetes/base/clickhouse-migration/pezzo-clickhouse-migrate-deployment.yaml
+++ b/kubernetes/base/clickhouse-migration/pezzo-clickhouse-migrate-deployment.yaml
@@ -40,3 +40,18 @@ spec:
           name: pezzo-clickhouse-migrate
           workingDir: /app/clickhouse
       restartPolicy: Always
+      tolerations:
+        - key: nodepool-version.spaas.smartnews.net/v2
+          operator: Exists
+          effect: NoSchedule
+        - key: addon.spaas.smartnews.net/datadog
+          operator: Exists
+          effect: NoSchedule
+        - key: pricing.spaas.smartnews.net/ondemand
+          operator: Exists
+          effect: NoSchedule
+      nodeSelector:
+        nodepool-version.spaas.smartnews.net/v2: "true"
+        addon.spaas.smartnews.net/datadog: "true"
+        kubernetes.io/arch: "amd64"
+        pricing.spaas.smartnews.net/ondemand: "true"
