--- a/kubernetes/base/postgres/postgres-deployment.yaml
+++ b/kubernetes/base/postgres/postgres-deployment.yaml
@@ -48,6 +48,21 @@ spec:
             - mountPath: /var/lib/postgresql/data
               name: postgres-data
       restartPolicy: Always
+      tolerations:
+        - key: nodepool-version.spaas.smartnews.net/v2
+          operator: Exists
+          effect: NoSchedule
+        - key: addon.spaas.smartnews.net/datadog
+          operator: Exists
+          effect: NoSchedule
+        - key: pricing.spaas.smartnews.net/ondemand
+          operator: Exists
+          effect: NoSchedule
+      nodeSelector:
+        nodepool-version.spaas.smartnews.net/v2: "true"
+        addon.spaas.smartnews.net/datadog: "true"
+        kubernetes.io/arch: "amd64"
+        pricing.spaas.smartnews.net/ondemand: "true"
       volumes:
         - name: postgres-data
           persistentVolumeClaim:
