--- a/kubernetes/base/server/pezzo-server-deployment.yaml
+++ b/kubernetes/base/server/pezzo-server-deployment.yaml
@@ -69,3 +69,18 @@ spec:
               hostPort: 3000
               protocol: TCP
       restartPolicy: Always
+      tolerations:
+        - key: nodepool-version.spaas.smartnews.net/v2
+          operator: Exists
+          effect: NoSchedule
+        - key: addon.spaas.smartnews.net/datadog
+          operator: Exists
+          effect: NoSchedule
+        - key: pricing.spaas.smartnews.net/ondemand
+          operator: Exists
+          effect: NoSchedule
+      nodeSelector:
+        nodepool-version.spaas.smartnews.net/v2: "true"
+        addon.spaas.smartnews.net/datadog: "true"
+        kubernetes.io/arch: "amd64"
+        pricing.spaas.smartnews.net/ondemand: "true"
