--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "lucide-react": "^0.274.0",
     "moment": "^2.29.4",
     "mysql2": "^3.6.5",
-    "next": "^13.5.6",
+    "next": "14.2.35",
     "openai": "^4.16.1",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.0",
@@ -161,7 +161,7 @@
     "clsx": "^2.0.0",
     "esbuild": "^0.17.17",
     "eslint": "~8.15.0",
-    "eslint-config-next": "^13.4.7",
+    "eslint-config-next": "14.2.35",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
